<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/card_margin">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="right"
                    android:text="@string/floating_labels"
                    android:textColor="@color/primary_text"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/floating_labels_concept"
                    android:textColor="@color/secondary_text"
                    android:textSize="14sp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/text_input_layout_conecpt_two"
                    android:textSize="14sp" />


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txt_input_layout_correo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edit_txt_mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Correo" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txt_input_layout_community"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">


                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edit_txt_community"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Comunidad" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Push me!" />

            </LinearLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>
</ScrollView>